year_two/IPP/tests/constants/bad/test5.src
.ippcode18

WRITE string@AHA\0
